// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Minimap component should align slider controller with proper left offset when user scrolls over the table 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  display: block;
  z-index: 999;
  left: NaNpx;
  bottom: 95px;
  width: 130px;
  opacity: .4;
  -webkit-transition: opacity 400ms ease-in-out;
  transition: opacity 400ms ease-in-out;
}

.c0:hover {
  opacity: 1;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
}

.c1 {
  position: absolute;
  display: block;
  left: 0;
  width: 100%;
  background: #ffffff;
  height: 4.6rem;
  box-shadow: 0 0.4rem 0.6rem 0.3rem rgba(51,51,51,0.1);
  z-index: 999;
  border-radius: .4rem;
}

.c2 {
  position: absolute;
  cursor: pointer;
  left: 8px;
  width: 114px;
  top: 0;
  z-index: 999;
}

.c4 {
  width: 30px;
  margin: 0.8rem 0.25rem;
  height: 3rem;
  background: #dfe4e9;
  z-index: 999;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 114px;
  z-index: 999;
}

.c3 > div:nth-child(1) {
  margin-left: 0;
}

.c3 > div:last-child {
  margin-right: 0;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  width: 30px;
  left: 0;
  cursor: move;
  height: 4.6rem;
  padding: 1.3rem 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  z-index: 999;
}

.c5 .c6 * {
  fill: #126AFA;
}

.c5:hover .c6 * {
  fill: #126AFA;
}

.c5:active .c6 * {
  fill: #126AFA;
}

.c5 .c6 {
  position: absolute;
  left: -0.4rem;
}

.c5 .c6:nth-child(2) {
  left: 1rem;
}

<div>
  <tr
    class="c0"
    offset="[object Object]"
  >
    <td
      class="c1"
      id="minimap"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
        </div>
        <div
          class="c5"
          id="sliderController"
          style="left: 0.8316831683168316px;"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.791 11.005H7.621l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41l-4.88-4.88h11.17c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.209 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59a.996.996 0 0 0 0-1.41l-6.58-6.6a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.87 4.89H5.209c-.55 0-1 .45-1 1s.45 1 1 1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`Minimap component should not align slider controller when user performs mousedown on slider controller and performs mousemove on window 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  display: block;
  z-index: 999;
  left: NaNpx;
  bottom: 95px;
  width: 130px;
  opacity: .4;
  -webkit-transition: opacity 400ms ease-in-out;
  transition: opacity 400ms ease-in-out;
}

.c0:hover {
  opacity: 1;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
}

.c1 {
  position: absolute;
  display: block;
  left: 0;
  width: 100%;
  background: #ffffff;
  height: 4.6rem;
  box-shadow: 0 0.4rem 0.6rem 0.3rem rgba(51,51,51,0.1);
  z-index: 999;
  border-radius: .4rem;
}

.c2 {
  position: absolute;
  cursor: pointer;
  left: 8px;
  width: 114px;
  top: 0;
  z-index: 999;
}

.c4 {
  width: 30px;
  margin: 0.8rem 0.25rem;
  height: 3rem;
  background: #dfe4e9;
  z-index: 999;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 114px;
  z-index: 999;
}

.c3 > div:nth-child(1) {
  margin-left: 0;
}

.c3 > div:last-child {
  margin-right: 0;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  width: 30px;
  left: 0;
  cursor: move;
  height: 4.6rem;
  padding: 1.3rem 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  z-index: 999;
}

.c5 .c6 * {
  fill: #126AFA;
}

.c5:hover .c6 * {
  fill: #126AFA;
}

.c5:active .c6 * {
  fill: #126AFA;
}

.c5 .c6 {
  position: absolute;
  left: -0.4rem;
}

.c5 .c6:nth-child(2) {
  left: 1rem;
}

<div>
  <tr
    class="c0"
    offset="[object Object]"
  >
    <td
      class="c1"
      id="minimap"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
        </div>
        <div
          class="c5"
          id="sliderController"
          style="left: 0px;"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.791 11.005H7.621l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41l-4.88-4.88h11.17c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.209 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59a.996.996 0 0 0 0-1.41l-6.58-6.6a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.87 4.89H5.209c-.55 0-1 .45-1 1s.45 1 1 1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`Minimap component should position minimap at the right hand side bottom of the table on window resize 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  display: block;
  z-index: 999;
  left: NaNpx;
  bottom: 95px;
  width: 130px;
  opacity: .4;
  -webkit-transition: opacity 400ms ease-in-out;
  transition: opacity 400ms ease-in-out;
}

.c0:hover {
  opacity: 1;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
}

.c1 {
  position: absolute;
  display: block;
  left: 0;
  width: 100%;
  background: #ffffff;
  height: 4.6rem;
  box-shadow: 0 0.4rem 0.6rem 0.3rem rgba(51,51,51,0.1);
  z-index: 999;
  border-radius: .4rem;
}

.c2 {
  position: absolute;
  cursor: pointer;
  left: 8px;
  width: 114px;
  top: 0;
  z-index: 999;
}

.c4 {
  width: 30px;
  margin: 0.8rem 0.25rem;
  height: 3rem;
  background: #dfe4e9;
  z-index: 999;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 114px;
  z-index: 999;
}

.c3 > div:nth-child(1) {
  margin-left: 0;
}

.c3 > div:last-child {
  margin-right: 0;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  width: 30px;
  left: 0;
  cursor: move;
  height: 4.6rem;
  padding: 1.3rem 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  z-index: 999;
}

.c5 .c6 * {
  fill: #126AFA;
}

.c5:hover .c6 * {
  fill: #126AFA;
}

.c5:active .c6 * {
  fill: #126AFA;
}

.c5 .c6 {
  position: absolute;
  left: -0.4rem;
}

.c5 .c6:nth-child(2) {
  left: 1rem;
}

<div>
  <tr
    class="c0"
    offset="[object Object]"
  >
    <td
      class="c1"
      id="minimap"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
        </div>
        <div
          class="c5"
          id="sliderController"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.791 11.005H7.621l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41l-4.88-4.88h11.17c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.209 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59a.996.996 0 0 0 0-1.41l-6.58-6.6a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.87 4.89H5.209c-.55 0-1 .45-1 1s.45 1 1 1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`Minimap component should position minimap at the right hand side bottom of the table on window scroll 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  display: block;
  z-index: 999;
  left: NaNpx;
  bottom: 95px;
  width: 130px;
  opacity: .4;
  -webkit-transition: opacity 400ms ease-in-out;
  transition: opacity 400ms ease-in-out;
}

.c0:hover {
  opacity: 1;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
}

.c1 {
  position: absolute;
  display: block;
  left: 0;
  width: 100%;
  background: #ffffff;
  height: 4.6rem;
  box-shadow: 0 0.4rem 0.6rem 0.3rem rgba(51,51,51,0.1);
  z-index: 999;
  border-radius: .4rem;
}

.c2 {
  position: absolute;
  cursor: pointer;
  left: 8px;
  width: 114px;
  top: 0;
  z-index: 999;
}

.c4 {
  width: 30px;
  margin: 0.8rem 0.25rem;
  height: 3rem;
  background: #dfe4e9;
  z-index: 999;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 114px;
  z-index: 999;
}

.c3 > div:nth-child(1) {
  margin-left: 0;
}

.c3 > div:last-child {
  margin-right: 0;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  width: 30px;
  left: 0;
  cursor: move;
  height: 4.6rem;
  padding: 1.3rem 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  z-index: 999;
}

.c5 .c6 * {
  fill: #126AFA;
}

.c5:hover .c6 * {
  fill: #126AFA;
}

.c5:active .c6 * {
  fill: #126AFA;
}

.c5 .c6 {
  position: absolute;
  left: -0.4rem;
}

.c5 .c6:nth-child(2) {
  left: 1rem;
}

<div>
  <tr
    class="c0"
    offset="[object Object]"
  >
    <td
      class="c1"
      id="minimap"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
        </div>
        <div
          class="c5"
          id="sliderController"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.791 11.005H7.621l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41l-4.88-4.88h11.17c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.209 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59a.996.996 0 0 0 0-1.41l-6.58-6.6a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.87 4.89H5.209c-.55 0-1 .45-1 1s.45 1 1 1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`Minimap component should position slider controller at the correct position when dragged inside slider content 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  display: block;
  z-index: 999;
  left: NaNpx;
  bottom: 95px;
  width: 130px;
  opacity: .4;
  -webkit-transition: opacity 400ms ease-in-out;
  transition: opacity 400ms ease-in-out;
}

.c0:hover {
  opacity: 1;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
}

.c1 {
  position: absolute;
  display: block;
  left: 0;
  width: 100%;
  background: #ffffff;
  height: 4.6rem;
  box-shadow: 0 0.4rem 0.6rem 0.3rem rgba(51,51,51,0.1);
  z-index: 999;
  border-radius: .4rem;
}

.c2 {
  position: absolute;
  cursor: pointer;
  left: 8px;
  width: 114px;
  top: 0;
  z-index: 999;
}

.c4 {
  width: 30px;
  margin: 0.8rem 0.25rem;
  height: 3rem;
  background: #dfe4e9;
  z-index: 999;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 114px;
  z-index: 999;
}

.c3 > div:nth-child(1) {
  margin-left: 0;
}

.c3 > div:last-child {
  margin-right: 0;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  width: 30px;
  left: 0;
  cursor: move;
  height: 4.6rem;
  padding: 1.3rem 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  z-index: 999;
}

.c5 .c6 * {
  fill: #126AFA;
}

.c5:hover .c6 * {
  fill: #126AFA;
}

.c5:active .c6 * {
  fill: #126AFA;
}

.c5 .c6 {
  position: absolute;
  left: -0.4rem;
}

.c5 .c6:nth-child(2) {
  left: 1rem;
}

<div>
  <tr
    class="c0"
    offset="[object Object]"
  >
    <td
      class="c1"
      id="minimap"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
        </div>
        <div
          class="c5"
          id="sliderController"
          style="left: 25px;"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.791 11.005H7.621l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41l-4.88-4.88h11.17c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.209 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59a.996.996 0 0 0 0-1.41l-6.58-6.6a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.87 4.89H5.209c-.55 0-1 .45-1 1s.45 1 1 1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`Minimap component should position slider controller at the extreme end of the slider content when dragged out of it 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  display: block;
  z-index: 999;
  left: NaNpx;
  bottom: 95px;
  width: 130px;
  opacity: .4;
  -webkit-transition: opacity 400ms ease-in-out;
  transition: opacity 400ms ease-in-out;
}

.c0:hover {
  opacity: 1;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
}

.c1 {
  position: absolute;
  display: block;
  left: 0;
  width: 100%;
  background: #ffffff;
  height: 4.6rem;
  box-shadow: 0 0.4rem 0.6rem 0.3rem rgba(51,51,51,0.1);
  z-index: 999;
  border-radius: .4rem;
}

.c2 {
  position: absolute;
  cursor: pointer;
  left: 8px;
  width: 114px;
  top: 0;
  z-index: 999;
}

.c4 {
  width: 30px;
  margin: 0.8rem 0.25rem;
  height: 3rem;
  background: #dfe4e9;
  z-index: 999;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 114px;
  z-index: 999;
}

.c3 > div:nth-child(1) {
  margin-left: 0;
}

.c3 > div:last-child {
  margin-right: 0;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  width: 30px;
  left: 0;
  cursor: move;
  height: 4.6rem;
  padding: 1.3rem 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  z-index: 999;
}

.c5 .c6 * {
  fill: #126AFA;
}

.c5:hover .c6 * {
  fill: #126AFA;
}

.c5:active .c6 * {
  fill: #126AFA;
}

.c5 .c6 {
  position: absolute;
  left: -0.4rem;
}

.c5 .c6:nth-child(2) {
  left: 1rem;
}

<div>
  <tr
    class="c0"
    offset="[object Object]"
  >
    <td
      class="c1"
      id="minimap"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
        </div>
        <div
          class="c5"
          id="sliderController"
          style="left: 84px;"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.791 11.005H7.621l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41l-4.88-4.88h11.17c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.209 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59a.996.996 0 0 0 0-1.41l-6.58-6.6a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.87 4.89H5.209c-.55 0-1 .45-1 1s.45 1 1 1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`Minimap component should position slider controller when performed drag operation on it 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  display: block;
  z-index: 999;
  left: NaNpx;
  bottom: 95px;
  width: 130px;
  opacity: .4;
  -webkit-transition: opacity 400ms ease-in-out;
  transition: opacity 400ms ease-in-out;
}

.c0:hover {
  opacity: 1;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
}

.c1 {
  position: absolute;
  display: block;
  left: 0;
  width: 100%;
  background: #ffffff;
  height: 4.6rem;
  box-shadow: 0 0.4rem 0.6rem 0.3rem rgba(51,51,51,0.1);
  z-index: 999;
  border-radius: .4rem;
}

.c2 {
  position: absolute;
  cursor: pointer;
  left: 8px;
  width: 114px;
  top: 0;
  z-index: 999;
}

.c4 {
  width: 30px;
  margin: 0.8rem 0.25rem;
  height: 3rem;
  background: #dfe4e9;
  z-index: 999;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 114px;
  z-index: 999;
}

.c3 > div:nth-child(1) {
  margin-left: 0;
}

.c3 > div:last-child {
  margin-right: 0;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  width: 30px;
  left: 0;
  cursor: move;
  height: 4.6rem;
  padding: 1.3rem 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  z-index: 999;
}

.c5 .c6 * {
  fill: #126AFA;
}

.c5:hover .c6 * {
  fill: #126AFA;
}

.c5:active .c6 * {
  fill: #126AFA;
}

.c5 .c6 {
  position: absolute;
  left: -0.4rem;
}

.c5 .c6:nth-child(2) {
  left: 1rem;
}

<div>
  <tr
    class="c0"
    offset="[object Object]"
  >
    <td
      class="c1"
      id="minimap"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
        </div>
        <div
          class="c5"
          id="sliderController"
          style="left: 0px;"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.791 11.005H7.621l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41l-4.88-4.88h11.17c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.209 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59a.996.996 0 0 0 0-1.41l-6.58-6.6a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.87 4.89H5.209c-.55 0-1 .45-1 1s.45 1 1 1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`Minimap component should render properly 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  display: block;
  z-index: 999;
  left: NaNpx;
  bottom: 95px;
  width: 130px;
  opacity: .4;
  -webkit-transition: opacity 400ms ease-in-out;
  transition: opacity 400ms ease-in-out;
}

.c0:hover {
  opacity: 1;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
}

.c1 {
  position: absolute;
  display: block;
  left: 0;
  width: 100%;
  background: #ffffff;
  height: 4.6rem;
  box-shadow: 0 0.4rem 0.6rem 0.3rem rgba(51,51,51,0.1);
  z-index: 999;
  border-radius: .4rem;
}

.c2 {
  position: absolute;
  cursor: pointer;
  left: 8px;
  width: 114px;
  top: 0;
  z-index: 999;
}

.c4 {
  width: 30px;
  margin: 0.8rem 0.25rem;
  height: 3rem;
  background: #dfe4e9;
  z-index: 999;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 114px;
  z-index: 999;
}

.c3 > div:nth-child(1) {
  margin-left: 0;
}

.c3 > div:last-child {
  margin-right: 0;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  width: 30px;
  left: 0;
  cursor: move;
  height: 4.6rem;
  padding: 1.3rem 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  z-index: 999;
}

.c5 .c6 * {
  fill: #126AFA;
}

.c5:hover .c6 * {
  fill: #126AFA;
}

.c5:active .c6 * {
  fill: #126AFA;
}

.c5 .c6 {
  position: absolute;
  left: -0.4rem;
}

.c5 .c6:nth-child(2) {
  left: 1rem;
}

<div>
  <tr
    class="c0"
    offset="[object Object]"
  >
    <td
      class="c1"
      id="minimap"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
        </div>
        <div
          class="c5"
          id="sliderController"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.791 11.005H7.621l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41l-4.88-4.88h11.17c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.209 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59a.996.996 0 0 0 0-1.41l-6.58-6.6a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.87 4.89H5.209c-.55 0-1 .45-1 1s.45 1 1 1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`Minimap component should stop slider controller positioning when we move cursor out of the window 1`] = `
.c0 {
  position: -webkit-sticky;
  position: sticky;
  display: block;
  z-index: 999;
  left: NaNpx;
  bottom: 95px;
  width: 130px;
  opacity: .4;
  -webkit-transition: opacity 400ms ease-in-out;
  transition: opacity 400ms ease-in-out;
}

.c0:hover {
  opacity: 1;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
}

.c1 {
  position: absolute;
  display: block;
  left: 0;
  width: 100%;
  background: #ffffff;
  height: 4.6rem;
  box-shadow: 0 0.4rem 0.6rem 0.3rem rgba(51,51,51,0.1);
  z-index: 999;
  border-radius: .4rem;
}

.c2 {
  position: absolute;
  cursor: pointer;
  left: 8px;
  width: 114px;
  top: 0;
  z-index: 999;
}

.c4 {
  width: 30px;
  margin: 0.8rem 0.25rem;
  height: 3rem;
  background: #dfe4e9;
  z-index: 999;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 114px;
  z-index: 999;
}

.c3 > div:nth-child(1) {
  margin-left: 0;
}

.c3 > div:last-child {
  margin-right: 0;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  width: 30px;
  left: 0;
  cursor: move;
  height: 4.6rem;
  padding: 1.3rem 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  z-index: 999;
}

.c5 .c6 * {
  fill: #126AFA;
}

.c5:hover .c6 * {
  fill: #126AFA;
}

.c5:active .c6 * {
  fill: #126AFA;
}

.c5 .c6 {
  position: absolute;
  left: -0.4rem;
}

.c5 .c6:nth-child(2) {
  left: 1rem;
}

<div>
  <tr
    class="c0"
    offset="[object Object]"
  >
    <td
      class="c1"
      id="minimap"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
          <div
            class="c4"
          />
        </div>
        <div
          class="c5"
          id="sliderController"
        >
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.791 11.005H7.621l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41l-4.88-4.88h11.17c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
          <svg
            class="c6 c7"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.209 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59a.996.996 0 0 0 0-1.41l-6.58-6.6a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.87 4.89H5.209c-.55 0-1 .45-1 1s.45 1 1 1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
        </div>
      </div>
    </td>
  </tr>
</div>
`;
